# HaxePythonLibrary-Test

./: Build.hx  CMakeLists.txt  PostBuild_MSVC_plugin.bat  PreBuild_CMake.bat  Prototyper.hx  README.md  RunPrototyper.bat  gen_bindings.hxml  reflaxe_build.hxml
native/: bindings.cpp
src/hxpy/: Api.hx  ComplexData.hx  Entry.hx  KV.hx  Person.hx  PyExports.hx
src/tools/: GenBindings.hx  GenBindingsFromSchema.hx  PySchema.hx  SchemaMain.hx
